Split microbenchmark to a separate module
To run it, cd into 'microbench' and run 'mvn test'. Run 'mvn deploy' to browse the test report with your web browser. It will display instructions for the first run.